# Snake_cpp_qt

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  Snake_cpp_qt.pro  defaults.pri  gamewindow.ui
Snake_cpp_qt/: CMakeLists.txt  Snake_cpp_qt.pro  gamewindow.cpp  gamewindow.h  gamewindow.ui  main.cpp
Snake_cpp_qt/constants/: CMakeLists.txt  constants.h
Snake_cpp_qt/gui/: CMakeLists.txt  dialog_highscore.cpp  dialog_highscore.h  dialog_highscore.ui  dialog_new_highscore.cpp  dialog_new_highscore.h  dialog_new_highscore.ui  dialog_settings.cpp  dialog_settings.h  dialog_settings.ui
Snake_cpp_qt/helper/: CMakeLists.txt  helper.cpp  helper.h
Snake_cpp_qt/model/: CMakeLists.txt  food.cpp  food.h  snake.cpp  snake.h
Snake_cpp_qt/resources/: resources.qrc
Test/: CMakeLists.txt  Test.pro  main.cpp  tst_helper.h  tst_snake.h  tst_snakemove.h
cmake/: windeployqt.cmake
